--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,24 @@
 @charset "UTF-8";
+
 h1 {
     padding: 0 1em;
 }
+
 main {
     padding: 0 2em;
+}
+
+fieldset {
+    border: none;
+}
+label, p {
+    font-size: 1.2em;
+}
+button {
+    margin: 1em 0.5em;
+    border: 2px solid hotpink;
+    border-radius: 0.5em;
+    background-color:blanchedalmond;
+    padding: 0.5em;
+    font-weight: bold;
 }
