--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,54 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Limelight&display=swap');
+
 html {
     box-sizing: border-box;
+    background-color: rgb(127, 238, 255);
+    background-image: linear-gradient( #8a809b, #623669);
+    color: white;
 }
+
 *,
 *:before,
 *:after {
     box-sizing: inherit;
 }
+
 /*========== Content ==========*/
 body {
     padding: 1em;
     margin: 1em;
+}
+
+main {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    max-width: 1000px;
+}
+
+form {
+    align-self: center;
+}
+fieldset {
+    border: none;
+}
+legend {
+    margin: 0.5em 0;
+    font-size: 1.4em;
+}
+label {
+    display: inline-block;
+    padding: 0.1em 0.4em;
+}
+button {
+    margin: 1.2em 0.5em;
+    padding: 0.5em 2em;
+    display: block;
+    justify-self: c;
+}
+/*========== Typography ==========*/
+h1 {
+    font-family: "Limelight", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
